--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "version": "0.1.2-b",
-    "name": "n-postal",
+    "version": "0.1.3-b",
+    "name": "postal",
     "author": {
         "name": "Alex",
         "email": "a.gvrnsk@gmail.com"
@@ -10,7 +10,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/sanyabeast/nuPostal.git"
+        "url": "https://github.com/sanyabeast/postal.git"
     },
     "dependencies": {
         "vpplus": "git://github.com/sanyabeast/vpplus.git"
